--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,7 +3,9 @@ body {
 }
 
 .container {
+    margin: 0px 100px 0px 100px;
     display: flex;
     align-content: center;
     justify-content: center;
+    flex-direction: column;
 }
